Added a registration form.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -8,3 +8,10 @@ login.label.login = Login
 login.label.password = Password
 login.button.login = Login
 
+# Register form.
+register.label.login = Login
+register.label.password = Password
+register.label.confirm_password = Confirm password
+register.label.full_name = Full name
+register.label.email = Email
+register.button.submit = Submit
