Some refactoring and work in progress.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -15,3 +15,8 @@ register.label.confirm_password = Confirm password
 register.label.full_name = Full name
 register.label.email = Email
 register.button.submit = Submit
+
+# Errors.
+error.auth = Incorrect login or password.
+error.empty = Field "{0}" is empty.
+error.not_equal = Field "{0}" is not equal to field "{1}".
