Determined language from database on application start.

--- a/src/java/i18n/auctionserver_nl.properties
+++ b/src/java/i18n/auctionserver_nl.properties
@@ -1,3 +1,26 @@
 # Dutch file for Anuko Auction Server.
 
 # TODO: translate everything from the master file auctionserver.properties and put it here.
+# At this time this file contains only a few strings for testing.
+
+# TODO: translate the following:
+# title = Anuko Auction Server
+
+# Login form.
+# login.label.register = Register
+# login.label.login = Login
+# login.label.password = Password
+login.button.login = Aanmelden
+
+# Register form.
+# register.label.login = Login
+# register.label.password = Password
+# register.label.confirm_password = Confirm password
+# register.label.full_name = Full name
+# register.label.email = Email
+# register.button.submit = Submit
+
+# Errors.
+error.auth = Onjuiste inlognaam of wachtwoord.
+error.empty = Veld "{0}" is leeg.
+error.not_equal = Veld "{0}" is niet gelijk aan veld "{1}".
