Added user registration code.

--- a/src/java/i18n/auctionserver_nl.properties
+++ b/src/java/i18n/auctionserver_nl.properties
@@ -13,14 +13,19 @@
 login.button.login = Aanmelden
 
 # Register form.
-# register.label.login = Login
-# register.label.password = Password
-# register.label.confirm_password = Confirm password
+register.label.login = Inlognaam
+register.label.password = Wachtwoord
+register.label.confirm_password = Bevestig wachtwoord
+# TODO: translate the following:
 # register.label.full_name = Full name
-# register.label.email = Email
+register.label.email = E-mailadres
+# TODO: translate the following:
 # register.button.submit = Submit
 
 # Errors.
+error.db = Database fout.
 error.auth = Onjuiste inlognaam of wachtwoord.
 error.empty = Veld "{0}" is leeg.
 error.not_equal = Veld "{0}" is niet gelijk aan veld "{1}".
+error.field = Incorrecte gegevens: "{0}".
+error.user_exists = Een gebruiker met deze inlognaam bestaat al.
