--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -17,6 +17,9 @@ register.label.email = Email
 register.button.submit = Submit
 
 # Errors.
+error.db = Database error.
 error.auth = Incorrect login or password.
 error.empty = Field "{0}" is empty.
 error.not_equal = Field "{0}" is not equal to field "{1}".
+error.field = Incorrect "{0}" data.
+error.user_exists = User with this login already exists.
