Added website templates.

--- a/src/java/i18n/auctionserver_nl.properties
+++ b/src/java/i18n/auctionserver_nl.properties
@@ -6,10 +6,15 @@
 # TODO: translate the following:
 # title = Anuko Auction Server
 
+# Site menu.
+# menu.login = Login
+# menu.register = Register
+# menu.auctions = Auctions
+# menu.profile = Profile
+
 # Login form.
-# login.label.register = Register
-# login.label.login = Login
-# login.label.password = Password
+login.label.login = Inlognaam
+login.label.password = Wachtwoord
 login.button.login = Aanmelden
 
 # Register form.
