--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -2,8 +2,13 @@
 
 title = Anuko Auction Server
 
+# Site menu.
+menu.login = Login
+menu.register = Register
+menu.auctions = Auctions
+menu.profile = Profile
+
 # Login form.
-login.label.register = Register
 login.label.login = Login
 login.label.password = Password
 login.button.login = Login
