Added Authenticator class and started to use it.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -8,6 +8,11 @@ menu.register = Register
 menu.auctions = Auctions
 menu.profile = Profile
 
+# Buttons.
+button.login = Login
+button.submit = Submit
+button.save = Save
+
 # Login form.
 login.label.login = Login
 login.label.password = Password
