--- a/src/java/i18n/auctionserver_nl.properties
+++ b/src/java/i18n/auctionserver_nl.properties
@@ -12,6 +12,11 @@
 # menu.auctions = Auctions
 # menu.profile = Profile
 
+# Buttons.
+# button.login = Login
+# button.submit = Submit
+# button.save = Save
+
 # Login form.
 login.label.login = Inlognaam
 login.label.password = Wachtwoord
