--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -4,6 +4,7 @@ title = Anuko Auction Server
 
 # Site menu.
 menu.login = Login
+menu.logout = Logout
 menu.register = Register
 menu.auctions = Auctions
 menu.profile = Profile
