Renamed full_name to just name to keep things simple.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -23,7 +23,7 @@ login.button.login = Login
 register.label.login = Login
 register.label.password = Password
 register.label.confirm_password = Confirm password
-register.label.full_name = Full name
+register.label.name = Name
 register.label.email = Email
 register.button.submit = Submit
 
