--- a/src/java/i18n/auctionserver_nl.properties
+++ b/src/java/i18n/auctionserver_nl.properties
@@ -27,7 +27,7 @@ register.label.login = Inlognaam
 register.label.password = Wachtwoord
 register.label.confirm_password = Bevestig wachtwoord
 # TODO: translate the following:
-# register.label.full_name = Full name
+# register.label.name = Name
 register.label.email = E-mailadres
 # TODO: translate the following:
 # register.button.submit = Submit
