Checking in work in progress on auctions.
Started to work on auctions, this is a checkin for safekeeping.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -13,6 +13,14 @@ menu.profile = Profile
 button.login = Login
 button.submit = Submit
 button.save = Save
+button.add_auction = Add auction
+
+# Labels
+label.name = Name
+label.image_uri = Image uri
+label.description = Description
+label.currency = Currency
+label.reserve_price = Reserve price
 
 # Login form.
 login.label.login = Login
@@ -34,3 +42,4 @@ error.empty = Field "{0}" is empty.
 error.not_equal = Field "{0}" is not equal to field "{1}".
 error.field = Incorrect "{0}" data.
 error.user_exists = User with this login already exists.
+error.no_auctions = There are no active auctions.
