--- a/src/java/i18n/auctionserver_nl.properties
+++ b/src/java/i18n/auctionserver_nl.properties
@@ -16,6 +16,7 @@
 # button.login = Login
 # button.submit = Submit
 # button.save = Save
+# button.add_auction = Add auction
 
 # Login form.
 login.label.login = Inlognaam
@@ -39,3 +40,5 @@ error.empty = Veld "{0}" is leeg.
 error.not_equal = Veld "{0}" is niet gelijk aan veld "{1}".
 error.field = Incorrecte gegevens: "{0}".
 error.user_exists = Een gebruiker met deze inlognaam bestaat al.
+# TODO: translate the following:
+# error.no_auctions = There are no active auctions.
