Adjusted database structure.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -7,12 +7,14 @@ menu.login = Login
 menu.logout = Logout
 menu.register = Register
 menu.auctions = Auctions
+menu.my_auctions = My auctions
 menu.profile = Profile
 
 # Buttons.
 button.login = Login
 button.submit = Submit
 button.save = Save
+button.delete = Delete
 button.add_auction = Add auction
 
 # Labels
@@ -20,7 +22,13 @@ label.name = Name
 label.image_uri = Image uri
 label.description = Description
 label.currency = Currency
+label.duration = Duration in days
 label.reserve_price = Reserve price
+label.item = Item
+label.bids = Bids
+label.price = Price
+label.end = End
+label.approved = Approved
 
 # Login form.
 login.label.login = Login
