Refactoring in progress.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -18,7 +18,11 @@ button.delete = Delete
 button.add_auction = Add auction
 
 # Labels
+label.login = Login
+label.password = Password
+label.confirm_password = Confirm password
 label.name = Name
+label.email = Email
 label.image_uri = Image uri
 label.description = Description
 label.currency = Currency
@@ -29,19 +33,8 @@ label.bids = Bids
 label.price = Price
 label.end = End
 label.approved = Approved
-
-# Login form.
-login.label.login = Login
-login.label.password = Password
-login.button.login = Login
-
-# Register form.
-register.label.login = Login
-register.label.password = Password
-register.label.confirm_password = Confirm password
-register.label.name = Name
-register.label.email = Email
-register.button.submit = Submit
+label.edit = Edit
+label.delete = Delete
 
 # Errors.
 error.db = Database error.
