--- a/src/java/i18n/auctionserver_nl.properties
+++ b/src/java/i18n/auctionserver_nl.properties
@@ -13,25 +13,16 @@
 # menu.profile = Profile
 
 # Buttons.
-# button.login = Login
+button.login = Aanmelden
 # button.submit = Submit
 # button.save = Save
 # button.add_auction = Add auction
 
-# Login form.
-login.label.login = Inlognaam
-login.label.password = Wachtwoord
-login.button.login = Aanmelden
-
-# Register form.
-register.label.login = Inlognaam
-register.label.password = Wachtwoord
-register.label.confirm_password = Bevestig wachtwoord
-# TODO: translate the following:
-# register.label.name = Name
-register.label.email = E-mailadres
-# TODO: translate the following:
-# register.button.submit = Submit
+# Labels.
+label.login = Inlognaam
+label.password = Wachtwoord
+label.confirm_password = Bevestig wachtwoord
+label.email = E-mailadres
 
 # Errors.
 error.db = Database fout.
