Work in progress adding bid forms.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -8,6 +8,7 @@ menu.logout = Logout
 menu.register = Register
 menu.auctions = Auctions
 menu.my_auctions = My auctions
+menu.my_bids = My bids
 menu.profile = Profile
 
 # Buttons.
@@ -16,6 +17,8 @@ button.submit = Submit
 button.save = Save
 button.delete = Delete
 button.add_auction = Add auction
+button.place_bid = Place bid
+button.confirm = Confirm
 
 # Labels
 label.login = Login
@@ -29,14 +32,20 @@ label.currency = Currency
 label.duration = Duration in days
 label.reserve_price = Reserve price
 label.item = Item
+label.bid = Bid
 label.bids = Bids
 label.price = Price
+label.current_price = Current price
 label.end = End
 label.approved = Approved
 label.edit = Edit
 label.delete = Delete
+label.your_bid = Your bid
+label.status = Status
+label.status.pending = pending
 
 # Errors.
+error.sys = System error.
 error.db = Database error.
 error.auth = Incorrect login or password.
 error.empty = Field "{0}" is empty.
@@ -44,3 +53,5 @@ error.not_equal = Field "{0}" is not equal to field "{1}".
 error.field = Incorrect "{0}" data.
 error.user_exists = User with this login already exists.
 error.no_auctions = There are no active auctions.
+error.no_bids = There are no bids.
+error.own_item = You can't bid on your own item.
