Implemented notofications about a new auctions.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -55,3 +55,7 @@ error.user_exists = User with this login already exists.
 error.no_auctions = There are no active auctions.
 error.no_bids = There are no bids.
 error.own_item = You can't bid on your own item.
+
+# Email messages.
+email.new_auction.subject = New auction
+email.new_auction.body = A new auction was posted. Please approve.
