Some more refactoring.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -34,6 +34,7 @@ label.reserve_price = Reserve price
 label.item = Item
 label.bid = Bid
 label.bids = Bids
+label.top_bid = Top bid
 label.price = Price
 label.current_price = Current price
 label.end = End
@@ -52,10 +53,35 @@ error.empty = Field "{0}" is empty.
 error.not_equal = Field "{0}" is not equal to field "{1}".
 error.field = Incorrect "{0}" data.
 error.user_exists = User with this login already exists.
-error.no_auctions = There are no active auctions.
+error.no_auctions = There are no auctions.
 error.no_bids = There are no bids.
 error.own_item = You can't bid on your own item.
+error.insufficient_bid = Insufficient bid.
+
+# Messages.
+message.check_mailbox = Thank you! Please check your mailbox to confirm your bid.
+message.registration_required = Registration is required in order to use the auction server. You can <a href="{0}" target="_blank">register here</a>.
+message.multiple_logins = Multiple logins exist for {0}. Login to <a href="{1}" target="_blank">auction server</a> to place your bid.
+message.confirm_bid = Thank you! Please confirm your bid on the <a href="{0}" target="_blank">auction server</a>.
 
 # Email messages.
 email.new_auction.subject = New auction
 email.new_auction.body = A new auction was posted. Please approve.
+email.new_bid.subject = New bid
+email.new_bid.body = A new bid was placed on your item: {0}.\n\nCurrent top bid is: {1}.
+email.lost_bid.subject = You have been outbid
+email.lost_bid.body = You have lost a top bid status for item: {0}.\n\nCurrent top bid is: {1}.
+email.top_bid.subject = You are a top bidder
+email.top_bid.body = You have placed a bid on item: {0}.\n\nYou are currently a top bidder. Current top bid is: {1}.
+
+email.item_sold.subject = Your item is sold
+email.item_sold.body = Your item "{0}" is sold for {1}. Please contact the buyer to complete the transaction.
+email.item_not_sold.subject = Your item did not sell
+email.item_not_sold.body = Your item "{0}" did not sell. Feel free to list the item again.
+email.item_won.subject = Your have won an item
+email.item_won.body = You have won an item "{0}" for {1}. Please contact the seller for payment and transaction completion information.
+email.item_not_won.subject = Reserve not met
+email.item_not_won.body = You were a top bidder on item "{0}" for {1} but the reserve price set by the seller was not met.
+
+email.registration_required.subject = Registration required
+email.registration_required.body = Registration required in order to use auction server. You can register at {0}.
