Introduced AuctionItem class, separate from AuctionBean.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -80,8 +80,8 @@ email.item_not_sold.subject = Your item did not sell
 email.item_not_sold.body = Your item "{0}" did not sell. Feel free to list the item again.
 email.item_won.subject = Your have won an item
 email.item_won.body = You have won an item "{0}" for {1}. Please contact the seller for payment and transaction completion information.
-email.item_not_won.subject = Reserve not met
-email.item_not_won.body = You were a top bidder on item "{0}" for {1} but the reserve price set by the seller was not met.
+email.reserve_not_met.subject = Reserve not met
+email.reserve_not_met.body = You were a top bidder on item "{0}" for {1} but the reserve price set by the seller was not met.
 
 email.registration_required.subject = Registration required
 email.registration_required.body = Registration required in order to use auction server. You can register at {0}.
