--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -11,6 +11,14 @@ menu.my_auctions = My auctions
 menu.my_bids = My bids
 menu.profile = Profile
 
+# Page titles.
+title.register = Registration
+title.login = Login
+
+# Page hints
+hint.register = Please register with us before using this site.
+hint.login = Please login.
+
 # Buttons.
 button.login = Login
 button.submit = Submit
@@ -59,12 +67,18 @@ error.own_item = You can't bid on your own item.
 error.insufficient_bid = Insufficient bid.
 
 # Messages.
+message.registration_successful = Please check your mailbox and confirm your registration.
+message.registration_confirmed = Your registration is confirmed. Please login.
+
 message.check_mailbox = Thank you! Please check your mailbox to confirm your bid.
 message.registration_required = Registration is required in order to use the auction server. You can <a href="{0}" target="_blank">register here</a>.
 message.multiple_logins = Multiple logins exist for {0}. Login to <a href="{1}" target="_blank">auction server</a> to place your bid.
 message.confirm_bid = Thank you! Please confirm your bid on the <a href="{0}" target="_blank">auction server</a>.
 
 # Email messages.
+email.registration_successful.subject = Please confirm your registration
+email.registration_successful.body = Thank you for registering. Please confirm your registration by clicking on this link:\n\n {0}
+
 email.new_auction.subject = New auction
 email.new_auction.body = A new auction was posted. Please approve.
 email.new_bid.subject = New bid
