Work in progress on frame request processing.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -14,10 +14,14 @@ menu.profile = Profile
 # Page titles.
 title.register = Registration
 title.login = Login
+title.reset_password = Resetting Password
+title.change_password = Changing Password
 
 # Page hints
 hint.register = Please register with us before using this site.
 hint.login = Please login.
+hint.reset_password = Please type in your login or email.
+hint.change_password = Please type in your new password.
 
 # Buttons.
 button.login = Login
@@ -27,6 +31,7 @@ button.delete = Delete
 button.add_auction = Add auction
 button.place_bid = Place bid
 button.confirm = Confirm
+button.reset_password = Reset password
 
 # Labels
 label.login = Login
@@ -52,6 +57,7 @@ label.delete = Delete
 label.your_bid = Your bid
 label.status = Status
 label.status.pending = pending
+label.user = User
 
 # Errors.
 error.sys = System error.
@@ -65,19 +71,30 @@ error.no_auctions = There are no auctions.
 error.no_bids = There are no bids.
 error.own_item = You can't bid on your own item.
 error.insufficient_bid = Insufficient bid.
+error.user_not_found = User was not found.
+error.multiple_logins = Multiple logins exist for {0}.
+
+# Login form.
+form.login.forgot_password = Forgot password?
+form.login.about = Anuko Auction Server is a simple, open source auction system.
 
 # Messages.
 message.registration_successful = Please check your mailbox and confirm your registration.
 message.registration_confirmed = Your registration is confirmed. Please login.
-
+message.password_reset_request_sent = Password reset request sent by email.
+message.password_changed = Your password is changed. Please login.
 message.check_mailbox = Thank you! Please check your mailbox to confirm your bid.
+
 message.registration_required = Registration is required in order to use the auction server. You can <a href="{0}" target="_blank">register here</a>.
 message.multiple_logins = Multiple logins exist for {0}. Login to <a href="{1}" target="_blank">auction server</a> to place your bid.
 message.confirm_bid = Thank you! Please confirm your bid on the <a href="{0}" target="_blank">auction server</a>.
 
 # Email messages.
 email.registration_successful.subject = Please confirm your registration
-email.registration_successful.body = Thank you for registering. Please confirm your registration by clicking on this link:\n\n {0}
+email.registration_successful.body = Thank you for registering. Please confirm your registration by clicking on this link:\n\n{0}
+
+email.reset_password.subject = Password reset request
+email.reset_password.body = Dear User,\n\nSomeone, possibly you, requested your Anuko Auction Server password reset. Please visit this link if you want to reset your password.\n\n{0}
 
 email.new_auction.subject = New auction
 email.new_auction.body = A new auction was posted. Please approve.
@@ -87,7 +104,8 @@ email.lost_bid.subject = You have been outbid
 email.lost_bid.body = You have lost a top bid status for item: {0}.\n\nCurrent top bid is: {1}.
 email.top_bid.subject = You are a top bidder
 email.top_bid.body = You have placed a bid on item: {0}.\n\nYou are currently a top bidder. Current top bid is: {1}.
-
+email.confirm_bid.subject = Please confirm your bid
+email.confirm_bid.body = You have placed a bid on item: {0}.\n\nYour bid is currently unconfirmed.\n\nPlease confirm your  bid at: {1}.
 email.item_sold.subject = Your item is sold
 email.item_sold.body = Your item "{0}" is sold for {1}. Please contact the buyer to complete the transaction.
 email.item_not_sold.subject = Your item did not sell
