--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -16,12 +16,22 @@ title.register = Registration
 title.login = Login
 title.reset_password = Resetting Password
 title.change_password = Changing Password
+title.welcome = Welcome!
+title.unconfirmed_bids = Unconfirmed Bids
+title.bid_edit = Editing Bid
+title.bid_confirm = Confirm Bid
+title.success = Success
+title.my_bids = My Bids
 
 # Page hints
 hint.register = Please register with us before using this site.
 hint.login = Please login.
 hint.reset_password = Please type in your login or email.
 hint.change_password = Please type in your new password.
+hint.welcome = Please set your name and password.
+hint.unconfirmed_bids = The following bids are unconfirmed. Select and confirm if you wish to bid. 
+hint.bid_edit = You can adjust bid amount on this form.
+hint.bid_confirm = Please review and confirm your bid.
 
 # Buttons.
 button.login = Login
@@ -48,6 +58,7 @@ label.item = Item
 label.bid = Bid
 label.bids = Bids
 label.top_bid = Top bid
+label.current_bid = Current bid
 label.price = Price
 label.current_price = Current price
 label.end = End
@@ -58,6 +69,11 @@ label.your_bid = Your bid
 label.status = Status
 label.status.pending = pending
 label.user = User
+label.confirm = Confirm
+label.state = State
+label.reserve_met = Reserve met
+label.reserve_not_met = Reserve not met
+label.time_remaining = Time remaining
 
 # Errors.
 error.sys = System error.
@@ -73,6 +89,7 @@ error.own_item = You can't bid on your own item.
 error.insufficient_bid = Insufficient bid.
 error.user_not_found = User was not found.
 error.multiple_logins = Multiple logins exist for {0}.
+error.invalid_link = Invalid link.
 
 # Login form.
 form.login.forgot_password = Forgot password?
@@ -84,6 +101,7 @@ message.registration_confirmed = Your registration is confirmed. Please login.
 message.password_reset_request_sent = Password reset request sent by email.
 message.password_changed = Your password is changed. Please login.
 message.check_mailbox = Thank you! Please check your mailbox to confirm your bid.
+message.frame_bid_confirmed = Thank you! Your bid is confirmed.
 
 message.registration_required = Registration is required in order to use the auction server. You can <a href="{0}" target="_blank">register here</a>.
 message.multiple_logins = Multiple logins exist for {0}. Login to <a href="{1}" target="_blank">auction server</a> to place your bid.
@@ -117,3 +135,15 @@ email.reserve_not_met.body = You were a top bidder on item "{0}" for {1} but the
 
 email.registration_required.subject = Registration required
 email.registration_required.body = Registration required in order to use auction server. You can register at {0}.
+
+state.unknown = Unknown
+state.unconfirmed = Unconfirmed
+state.unprocessed = Unprocessed
+state.lost = Lost
+state.reserve_not_met = Reserve not met
+state.winning = Winning
+
+state.auction.pending = Pending
+state.auction.disapproved = Disapproved
+state.auction.active = Active
+state.auction.closed = Closed
