Fixed confirmed status.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -12,6 +12,7 @@ menu.my_bids = My bids
 menu.profile = Profile
 
 # Page titles.
+title.auctions = Auctions
 title.register = Registration
 title.login = Login
 title.reset_password = Resetting Password
