We have a rudimentary system working.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -13,6 +13,7 @@ menu.profile = Profile
 
 # Page titles.
 title.auctions = Auctions
+title.my_auctions = My Auctions
 title.register = Registration
 title.login = Login
 title.reset_password = Resetting Password
@@ -75,6 +76,7 @@ label.state = State
 label.reserve_met = Reserve met
 label.reserve_not_met = Reserve not met
 label.time_remaining = Time remaining
+label.from = from
 
 # Errors.
 error.sys = System error.
@@ -118,11 +120,11 @@ email.reset_password.body = Dear User,\n\nSomeone, possibly you, requested your 
 email.new_auction.subject = New auction
 email.new_auction.body = A new auction was posted. Please approve.
 email.new_bid.subject = New bid
-email.new_bid.body = A new bid was placed on your item: {0}.\n\nCurrent top bid is: {1}.
+email.new_bid.body = A new bid was placed on your item: {0}.\n\n{1}\n\nCurrent bid is: {2}.
 email.lost_bid.subject = You have been outbid
-email.lost_bid.body = You have lost a top bid status for item: {0}.\n\nCurrent top bid is: {1}.
+email.lost_bid.body = You have lost a top bid status for item: {0}.\n\nNew high bid is: {1}.\n\nThis auctions ends: {2}.\n\nBID AGAIN at {3}
 email.top_bid.subject = You are a top bidder
-email.top_bid.body = You have placed a bid on item: {0}.\n\nYou are currently a top bidder. Current top bid is: {1}.
+email.top_bid.body = You have placed a bid on item: {0}.\n\n{1}\n\nYou are currently a top bidder at: {2}.
 email.confirm_bid.subject = Please confirm your bid
 email.confirm_bid.body = You have placed a bid on item: {0}.\n\nYour bid is currently unconfirmed.\n\nPlease confirm your  bid at: {1}.
 email.item_sold.subject = Your item is sold
