Implemented sending closing reminders to losing bidders.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -135,6 +135,9 @@ email.item_won.subject = Your have won an item
 email.item_won.body = You have won an item "{0}" for {1}. Please contact the seller for payment and transaction completion information.
 email.reserve_not_met.subject = Reserve not met
 email.reserve_not_met.body = You were a top bidder on item "{0}" for {1} but the reserve price set by the seller was not met.
+email.closing_reminder.subject = Auction closing in less than 24 hours
+email.closing_reminder.body = Auction for item: {0} closes in less than 24 hours.\n\nCurrent high bid is: {1}.\n\nYou can bid again at {2}
+
 
 email.registration_required.subject = Registration required
 email.registration_required.body = Registration required in order to use auction server. You can register at {0}.
