Some cleanup in resource file.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -12,26 +12,24 @@ menu.my_bids = My bids
 menu.profile = Profile
 
 # Page titles.
+title.welcome = Welcome!
+title.login = Login
+title.register = Register
 title.auctions = Auctions
 title.my_auctions = My Auctions
-title.register = Registration
-title.login = Login
-title.reset_password = Resetting Password
-title.change_password = Changing Password
-title.welcome = Welcome!
-title.unconfirmed_bids = Unconfirmed Bids
-title.bid_edit = Editing Bid
+title.my_bids = My Bids
+title.reset_password = Reset Password
+title.change_password = Change Password
+title.bid_edit = Edit Bid
 title.bid_confirm = Confirm Bid
 title.success = Success
-title.my_bids = My Bids
 
 # Page hints
-hint.register = Please register with us before using this site.
+hint.welcome = Please set your name and password.
 hint.login = Please login.
+hint.register = Please register with us before using this site.
 hint.reset_password = Please type in your login or email.
 hint.change_password = Please type in your new password.
-hint.welcome = Please set your name and password.
-hint.unconfirmed_bids = The following bids are unconfirmed. Select and confirm if you wish to bid. 
 hint.bid_edit = You can adjust bid amount on this form.
 hint.bid_confirm = Please review and confirm your bid.
 
@@ -40,9 +38,9 @@ button.login = Login
 button.submit = Submit
 button.save = Save
 button.delete = Delete
+button.confirm = Confirm
 button.add_auction = Add auction
 button.place_bid = Place bid
-button.confirm = Confirm
 button.reset_password = Reset password
 
 # Labels
@@ -59,12 +57,9 @@ label.reserve_price = Reserve price
 label.item = Item
 label.bid = Bid
 label.bids = Bids
-label.top_bid = Top bid
 label.current_bid = Current bid
-label.price = Price
-label.current_price = Current price
 label.end = End
-label.approved = Approved
+
 label.edit = Edit
 label.delete = Delete
 label.your_bid = Your bid
