A bit of cleanup.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -59,22 +59,16 @@ label.bid = Bid
 label.bids = Bids
 label.current_bid = Current bid
 label.end = End
-
 label.edit = Edit
 label.delete = Delete
 label.your_bid = Your bid
 label.status = Status
-label.status.pending = pending
 label.user = User
-label.confirm = Confirm
 label.state = State
-label.reserve_met = Reserve met
-label.reserve_not_met = Reserve not met
 label.time_remaining = Time remaining
 label.from = from
 
 # Errors.
-error.sys = System error.
 error.db = Database error.
 error.auth = Incorrect login or password.
 error.empty = Field "{0}" is empty.
@@ -91,7 +85,6 @@ error.invalid_link = Invalid link.
 
 # Login form.
 form.login.forgot_password = Forgot password?
-form.login.about = Anuko Auction Server is a simple, open source auction system.
 
 # Messages.
 message.registration_successful = Please check your mailbox and confirm your registration.
@@ -100,18 +93,13 @@ message.password_reset_request_sent = Password reset request sent by email.
 message.password_changed = Your password is changed. Please login.
 message.check_mailbox = Thank you! Please check your mailbox to confirm your bid.
 message.frame_bid_confirmed = Thank you! Your bid is confirmed.
-
-message.registration_required = Registration is required in order to use the auction server. You can <a href="{0}" target="_blank">register here</a>.
 message.multiple_logins = Multiple logins exist for {0}. Login to <a href="{1}" target="_blank">auction server</a> to place your bid.
-message.confirm_bid = Thank you! Please confirm your bid on the <a href="{0}" target="_blank">auction server</a>.
 
 # Email messages.
 email.registration_successful.subject = Please confirm your registration
 email.registration_successful.body = Thank you for registering. Please confirm your registration by clicking on this link:\n\n{0}
-
 email.reset_password.subject = Password reset request
 email.reset_password.body = Dear User,\n\nSomeone, possibly you, requested your Anuko Auction Server password reset. Please visit this link if you want to reset your password.\n\n{0}
-
 email.new_auction.subject = New auction
 email.new_auction.body = A new auction was posted. Please approve.
 email.new_bid.subject = New bid
@@ -133,18 +121,18 @@ email.reserve_not_met.body = You were a top bidder on item "{0}" for {1} but the
 email.closing_reminder.subject = Auction closing in less than 24 hours
 email.closing_reminder.body = Auction for item: {0} closes in less than 24 hours.\n\nCurrent high bid is: {1}.\n\nYou can bid again at {2}
 
-
-email.registration_required.subject = Registration required
-email.registration_required.body = Registration required in order to use auction server. You can register at {0}.
-
-state.unknown = Unknown
-state.unconfirmed = Unconfirmed
-state.unprocessed = Unprocessed
-state.lost = Lost
-state.reserve_not_met = Reserve not met
-state.winning = Winning
-
+# Auction states.
+state.auction.unknown = Unknown
 state.auction.pending = Pending
 state.auction.disapproved = Disapproved
 state.auction.active = Active
 state.auction.closed = Closed
+
+# Bid states.
+state.bid.unknown = Unknown
+state.bid.unconfirmed = Unconfirmed
+state.bid.unprocessed = Unprocessed
+state.bid.lost = Lost
+state.bid.winning = Winning
+
+
