Provided localized implementation of remaining time.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -135,4 +135,5 @@ state.bid.unprocessed = Unprocessed
 state.bid.lost = Lost
 state.bid.winning = Winning
 
-
+# Remaining time parts.
+remaining.days = days
