Added user names in notification emails.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -103,21 +103,21 @@ email.reset_password.body = Dear User,\n\nSomeone, possibly you, requested your 
 email.new_auction.subject = New auction
 email.new_auction.body = A new auction was posted. Please approve.
 email.new_bid.subject = New bid
-email.new_bid.body = A new bid was placed on your item: {0}.\n\n{1}\n\nCurrent bid is: {2}.
+email.new_bid.body = Dear {0},\n\nA new bid was placed on your item: {1}.\n\n{2}\n\nCurrent bid is: {3}.
 email.lost_bid.subject = You have been outbid
-email.lost_bid.body = You have lost a top bid status for item: {0}.\n\nNew high bid is: {1}.\n\nThis auctions ends: {2}.\n\nBID AGAIN at {3}
+email.lost_bid.body = Dear {0},\n\nYou have lost a top bid status for item: {1}. New high bid is: {2}.\n\nThis auction ends in: {3}.\n\nBID AGAIN at {4}
 email.top_bid.subject = You are a top bidder
-email.top_bid.body = You have placed a bid on item: {0}.\n\n{1}\n\nYou are currently a top bidder at: {2}.
+email.top_bid.body = Dear {0},\n\nYou have placed a bid on item: {1}.\n\n{2}\n\nYou are currently a top bidder at: {3}.
 email.confirm_bid.subject = Please confirm your bid
 email.confirm_bid.body = You have placed a bid on item: {0}.\n\nYour bid is currently unconfirmed.\n\nPlease confirm your  bid at: {1}.
 email.item_sold.subject = Your item is sold
-email.item_sold.body = Your item "{0}" is sold for {1}. Please contact the buyer to complete the transaction.
+email.item_sold.body = Dear {0},\n\nYour item "{1}" is sold for {2}. Please contact the buyer to complete the transaction.
 email.item_not_sold.subject = Your item did not sell
-email.item_not_sold.body = Your item "{0}" did not sell. Feel free to list the item again.
+email.item_not_sold.body = Dear {0},\n\nYour item "{1}" did not sell. Feel free to list the item again.
 email.item_won.subject = Your have won an item
-email.item_won.body = You have won an item "{0}" for {1}. Please contact the seller for payment and transaction completion information.
+email.item_won.body = Dear {0},\n\nYou have won an item "{1}" for {2}. Please contact the seller for payment and transaction completion information.
 email.reserve_not_met.subject = Reserve not met
-email.reserve_not_met.body = You were a top bidder on item "{0}" for {1} but the reserve price set by the seller was not met.
+email.reserve_not_met.body = Dear {0},\n\nYou were a top bidder on item "{1}" for {2} but the reserve price set by the seller was not met.
 email.closing_reminder.subject = Auction closing in less than 24 hours
 email.closing_reminder.body = Auction for item: {0} closes in less than 24 hours.\n\nCurrent high bid is: {1}.\n\nYou can bid again at {2}
 
