--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -17,12 +17,16 @@ title.login = Login
 title.register = Register
 title.auctions = Auctions
 title.my_auctions = My Auctions
+title.auction = Auction
 title.my_bids = My Bids
 title.reset_password = Reset Password
 title.change_password = Change Password
+title.bid_put = Bid
 title.bid_edit = Edit Bid
 title.bid_confirm = Confirm Bid
 title.success = Success
+title.pay = Payment
+title.thanks = Thank You
 
 # Page hints
 hint.welcome = Please set your name and password.
@@ -30,8 +34,11 @@ hint.login = Please login.
 hint.register = Please register with us before using this site.
 hint.reset_password = Please type in your login or email.
 hint.change_password = Please type in your new password.
+hint.bid_put = Place your bid using this form.
 hint.bid_edit = You can adjust bid amount on this form.
 hint.bid_confirm = Please review and confirm your bid.
+hint.pay = Please pay for your item.
+hint.thanks = Thanks for your payment. We will be in touch with your shortly.
 
 # Buttons.
 button.login = Login
@@ -42,6 +49,7 @@ button.confirm = Confirm
 button.add_auction = Add auction
 button.place_bid = Place bid
 button.reset_password = Reset password
+button.checkout_paypal = PayPal Checkout
 
 # Labels
 label.login = Login
@@ -67,6 +75,7 @@ label.user = User
 label.state = State
 label.time_remaining = Time remaining
 label.from = from
+label.amount = Amount
 
 # Errors.
 error.db = Database error.
@@ -94,6 +103,7 @@ message.password_changed = Your password is changed. Please login.
 message.check_mailbox = Thank you! Please check your mailbox to confirm your bid.
 message.frame_bid_confirmed = Thank you! Your bid is confirmed.
 message.multiple_logins = Multiple logins exist for {0}. Login to <a href="{1}" target="_blank">auction server</a> to place your bid.
+message.other_auctions = See more <a href="/auctions.jsp" target="_blank">auctions</a> you may like.
 
 # Email messages.
 email.registration_successful.subject = Please confirm your registration
@@ -105,17 +115,17 @@ email.new_auction.body = A new auction was posted. Please approve.
 email.new_bid.subject = New bid
 email.new_bid.body = Dear {0},\n\nA new bid was placed on your item: {1}.\n\n{2}\n\nCurrent bid is: {3}.
 email.lost_bid.subject = You have been outbid
-email.lost_bid.body = Dear {0},\n\nYou have lost a top bid status for item: {1}. New high bid is: {2}.\n\nThis auction ends in: {3}.\n\nBID AGAIN at {4}
+email.lost_bid.body = Dear {0},\n\nYou have lost a top bid status for item: {1}. New high bid is: {2}.\n\nThis auction ends in: {3}.\n\nBid again at {4}
 email.top_bid.subject = You are a top bidder
 email.top_bid.body = Dear {0},\n\nYou have placed a bid on item: {1}.\n\n{2}\n\nYou are currently a top bidder at: {3}.
 email.confirm_bid.subject = Please confirm your bid
-email.confirm_bid.body = You have placed a bid on item: {0}.\n\nYour bid is currently unconfirmed.\n\nPlease confirm your  bid at: {1}.
+email.confirm_bid.body = You have placed a bid on item: {0}.\n\nYour bid is currently unconfirmed.\n\nPlease confirm your  bid at: {1}
 email.item_sold.subject = Your item is sold
-email.item_sold.body = Dear {0},\n\nYour item "{1}" is sold for {2}. Please contact the buyer to complete the transaction.
+email.item_sold.body = Dear {0},\n\nYour item "{1}" is sold for {2}. We will be in touch after your payment is secured.
 email.item_not_sold.subject = Your item did not sell
 email.item_not_sold.body = Dear {0},\n\nYour item "{1}" did not sell. Feel free to list the item again.
 email.item_won.subject = Your have won an item
-email.item_won.body = Dear {0},\n\nYou have won an item "{1}" for {2}. Please contact the seller for payment and transaction completion information.
+email.item_won.body = Dear {0},\n\nYou have won an item "{1}".\n\nPlease pay within the next 24 hours at: {2}
 email.reserve_not_met.subject = Reserve not met
 email.reserve_not_met.body = Dear {0},\n\nYou were a top bidder on item "{1}" for {2} but the reserve price set by the seller was not met.
 email.closing_reminder.subject = Auction closing in less than 24 hours
