Added a title and hint on the Profile page.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -15,6 +15,7 @@ menu.profile = Profile
 title.welcome = Welcome!
 title.login = Login
 title.register = Register
+title.profile = Profile
 title.auctions = Auctions
 title.my_auctions = My Auctions
 title.auction = Auction
@@ -32,6 +33,7 @@ title.thanks = Thank You
 hint.welcome = Please set your name and password.
 hint.login = Please login.
 hint.register = Please register with us before using this site.
+hint.profile = Edit your profile information.
 hint.reset_password = Please type in your login or email.
 hint.change_password = Please type in your new password.
 hint.bid_put = Place your bid using this form.
