--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -19,6 +19,7 @@ title.profile = Profile
 title.auctions = Auctions
 title.my_auctions = My Auctions
 title.auction = Auction
+title.auction_edit = Edit Auction
 title.my_bids = My Bids
 title.reset_password = Reset Password
 title.change_password = Change Password
@@ -36,11 +37,12 @@ hint.register = Please register with us before using this site.
 hint.profile = Edit your profile information.
 hint.reset_password = Please type in your login or email.
 hint.change_password = Please type in your new password.
+hint.auction_edit = Edit auction item details.
 hint.bid_put = Place your bid using this form.
 hint.bid_edit = You can adjust bid amount on this form.
 hint.bid_confirm = Please review and confirm your bid.
 hint.pay = Please pay for your item.
-hint.thanks = Thanks for your payment. We will be in touch with your shortly.
+hint.thanks = Thanks for your payment. We will be in touch with you shortly.
 
 # Buttons.
 button.login = Login
