Added some page titles and hints.

--- a/src/java/i18n/auctionserver.properties
+++ b/src/java/i18n/auctionserver.properties
@@ -15,12 +15,16 @@ menu.profile = Profile
 title.welcome = Welcome!
 title.login = Login
 title.register = Register
-title.profile = Profile
-title.auctions = Auctions
 title.my_auctions = My Auctions
-title.auction = Auction
-title.auction_edit = Edit Auction
 title.my_bids = My Bids
+title.profile = Profile
+
+title.auction = Auction
+title.auction_add = Add Auction
+title.auction_edit = Edit Auction
+title.auction_delete = Delete Auction
+
+
 title.reset_password = Reset Password
 title.change_password = Change Password
 title.bid_put = Bid
@@ -34,7 +38,14 @@ title.thanks = Thank You
 hint.welcome = Please set your name and password.
 hint.login = Please login.
 hint.register = Please register with us before using this site.
+hint.my_auctions = Manage your auctions here.
+hint.my_bids = View your bids here.
 hint.profile = Edit your profile information.
+
+hint.auction_add = Add a new auction item by filling the fields below.
+hint.auction_edit = Edit auction item details.
+hint.auction_delete = Delete auction by clicking the Delete button.
+
 hint.reset_password = Please type in your login or email.
 hint.change_password = Please type in your new password.
 hint.auction_edit = Edit auction item details.
